Estilos de menu terminado

--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
 
       
 
-            <navbar>
+            <nav>
                 <ul id="menu">
-                    <li><a href="#">INICIO</a<>/li>
+                    <li><a href="#">INICIO</a></li>
                     <li><a href="#">RELOJ</a></li>
                     <li><a href="#">SOBRE MI</a></li>
                     <li><a href="#">CONTACTO</a></li>
                 </ul>
-            </navbar>
+            </nav>
+
         </header>
         <!--Fin Cabecera-->
 
