agregado el slider

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <title>Proyecto con JavaScript</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+    <!--JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!--Slider-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+
 </head>
 
 <body>
@@ -41,8 +47,9 @@
         <!--Fin Cabecera-->
 
         <!--Inicio Slider-->
-        <div id="slider">
-
+        <div class="slider">
+            <div><img src="img/img/cielo.jpg" title="El cielo de Managua" alt="sky"></div>
+            <div><img src="img/img/rojo.jpg" title="Las hojas de Tipitapa" alt="red"></div>
         </div>
         <!--Fin slider-->
 
@@ -166,5 +173,6 @@
     </footer>
     <!--Fin footer-->
 </body>
-
+<!--Main js-->
+<script  type="text/Javascript" src="./js/main.js"></script>
 </html>
