--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <title>Proyecto con JavaScript</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+    <link id="theme" rel="stylesheet" type="text/css" href="styles/blue.css">
+
+
     <!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!--Slider-->
@@ -15,6 +18,14 @@
 </head>
 
 <body>
+
+   <!--Selector de tema-->
+   <div id="selector-theme">
+       <div id="to-green"></div>
+       <div id="to-blue"></div>
+       <div id="to-red"></div>
+   </div>
+
     <!--Inicio caja global-->
     <section id="global">
 
