--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Proyecto con JavaScript</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
-    <link id="theme" rel="stylesheet" type="text/css" href="styles/blue.css">
+    <link id="theme" rel="stylesheet" type="text/css" href="styles/green.css">
 
 
     <!--JQuery-->
