login falso y ajustes al evento scroll agregado

--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                      <h4><span>Identificate</span></h4>
                      <form>
                          <label>Nombre</label><br>
-                         <input type="Text"><br>
+                         <input type="Text" id="text-name"><br>
                          <label>Correo</label><br>
-                         <input type="Text"><br>
+                         <input type="Text" type="text-email"><br>
                          <label>Contraseña</label><br>
-                         <input type="password"><br>
-                         <input type="submit" value="Iniciar">
+                         <input type="password" id="text-pass"><br>
+                         <input type="submit" value="Iniciar" >
                      </form>
                  </div>
             </aside>
