--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
             <nav>
                 <ul id="menu">
-                    <li><a href="#">INICIO</a></li>
+                    <li><a href="index.html">INICIO</a></li>
                     <li><a href="#">RELOJ</a></li>
-                    <li><a href="#">SOBRE MI</a></li>
+                    <li><a href="about.html">SOBRE MI</a></li>
                     <li><a href="#">CONTACTO</a></li>
                 </ul>
             </nav>
@@ -81,8 +81,8 @@
                 <!--Articulos cargados desde json-->
             </div>
 
+          
             <!--Inicio Barra lateral-->
-           
             <aside id="sidebar">
                 <div id="about">
                     <h4><span>¿Quien soy?</span></h4>
