--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <nav>
                 <ul id="menu">
                     <li><a href="index.html">INICIO</a></li>
-                    <li><a href="#">RELOJ</a></li>
+                    <li><a href="watch.html">RELOJ</a></li>
                     <li><a href="about.html">SOBRE MI</a></li>
-                    <li><a href="#">CONTACTO</a></li>
+                    <li><a href="contact.html">CONTACTO</a></li>
                 </ul>
             </nav>
 
