--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <link type="text/css" rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.theme.css">
 
     <!--about JS-->
-    <script type="text/javascript" src="js/about.js"></script>
+    <script type="text/javascript" src="js/contact.js"></script>
 
 </head>
 
@@ -67,45 +67,26 @@
 
         <!--Contenido-->
         <section id="content">
-            <h2>Sobre mi</h2>
             <div id="box">
-                <div id="acordeon">
-                    <h3>Quien soy?</h3>
-                    <div>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima illum nesciunt molestias
-                            ipsa
-                            adipisci sed in unde, laboriosam harum temporibus quaerat vero nemo, vitae fugiat ipsum
-                            neque
-                            nulla doloribus aperiam!
-                        </p>
-                    </div>
+               <!--Cargar formulario-->
+               <h2>Contacto</h2>
+               <form>
+                   <label>Nombre</label>
+                   <input type="text"><br>
+                   <label>Apellidos</label>
+                   <input type="text"><br>
+                   <label>Email</label>
+                   <input type="email"><br>
+                   <label>Sexo</label>
+                   <input type="radio" name="gender" value="Masculino"><span>Masculino</span>    
+                   <input type="radio" name="gender" value="Femenino"><span>Femenino</span>
+                   <input type="radio" name="gender" value="Femenino"><span>Otro</span><br>
+                   <label>Fecha de nacimiento</label>
+                   <input type="text" id="calendar">
+                   <label>Edad</label>
 
 
-                    <h3>Servicios</h3>
-                    <div>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima illum nesciunt molestias
-                            ipsa
-                            adipisci sed in unde, laboriosam harum temporibus quaerat vero nemo, vitae fugiat ipsum
-                            neque
-                            nulla doloribus aperiam!
-                        </p>
-                    </div>
-
-
-                    <h3>Clientes</h3>
-                    <div>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima illum nesciunt molestias
-                            ipsa
-                            adipisci sed in unde, laboriosam harum temporibus quaerat vero nemo, vitae fugiat ipsum
-                            neque
-                            nulla doloribus aperiam!
-                        </p>
-                    </div>
-
-                </div>
+               </form>
             </div>
 
             <!--Inicio Barra lateral-->
