--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!--Moment-->
     <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/es.min.js" ></script>
+    <!--Validator Plugin-->
+    <script src="js/original.js"></script>
+    
 </head>
 
 <body>
