--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,8 @@
 
                    <label for="years">Edad</label>
                    <input type="text" name="years" required >
-
+                   
+                   <div class="errorTxt"></div>
                    <input type="submit" value="enviar">
 
 
